# adversarial_evo

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.yaml
configs/detector/: mlp.yaml
configs/gan/: wgan_gp.yaml
configs/loop/: default.yaml
data/: labeled_os_fingerprints.csv  os_fingerprints.csv
scripts/: firewall_responder.py  label_os_nvd.py  retrain_live.py  run_evolution.py  run_os.py  run_unified.py  suricata_feeder.py
src/: data.py  data_ids.py  data_os.py  data_unified.py  datab.py
src/detector/: lit_module.py  model.py
src/evolution/: loop.py
src/gan/: adversarial_training_lit.py  lit_module.py  losses.py  models.py
