[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advsec-evolution"
version = "1.0.0"
description = "AI-powered security evolution loop using GANs and neural networks"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "hydra-core>=1.3",
    "wandb",
    "omegaconf",
    "matplotlib",
    "pandas",
    "scikit-learn",
]

